cicd/templates-way1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: mydriving
  name: default
