cicd/templates-way1/dataload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dataload
    app.kubernetes.io/name: mydriving
  name: mydriving-dataload
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: dataload
      app.kubernetes.io/name: mydriving
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: dataload
        app.kubernetes.io/name: mydriving
    spec:
      containers:
        - env:
            - name: SQLDB
              valueFrom:
                secretKeyRef:
                  name: mydriving-database-secret
                  key: database
                  optional: false
            - name: SQLFQDN
              value: mydriving-database-0.mydriving-database.default.svc.cluster.local
            - name: SQLPASS
              valueFrom:
                secretKeyRef:
                  name: mydriving-database-secret
                  key: password
                  optional: false
            - name: SQLUSER
              valueFrom:
                secretKeyRef:
                  name: mydriving-database-secret
                  key: username
                  optional: false
          image: registrykar3457.azurecr.io/dataload:1.0
          name: dataload
          resources:
            requests:
              memory: 256Mi
              cpu: "0.25"
            limits:
              memory: 512Mi
              cpu: "0.5"
      restartPolicy: Always
