cicd/templates-way1/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: mydriving
  name: mydriving-database
  namespace: default
spec:
  ports:
    - name: database
      port: 1433
      targetPort: database
  clusterIP: None
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: mydriving
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: mydriving
  name: mydriving-database
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/name: mydriving
  serviceName: mydriving-database
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: mydriving
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - env:
            - name: MSSQL_PID
              value: Developer
            - name: ACCEPT_EULA
              value: "Y"
            - name: MSSQL_SA_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mydriving-database-secret
                  key: password
                  optional: false
          image: mcr.microsoft.com/mssql/server:2017-latest
          name: database
          ports:
            - containerPort: 1433
              name: database
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: database
            failureThreshold: 1
            periodSeconds: 3
          resources:
            requests:
              memory: 1Gi
              cpu: "1"
            limits:
              memory: 1Gi
              cpu: "1"
          volumeMounts:
            - name: data
              mountPath: /var/opt/mssql
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: managed-csi
        resources:
          requests:
            storage: 10Gi
