cicd/templates-way1/poi-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: poi-api
    app.kubernetes.io/name: mydriving
  name: mydriving-poi-api
  namespace: mydriving-api
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    app.kubernetes.io/component: poi-api
    app.kubernetes.io/name: mydriving
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: poi-api
    app.kubernetes.io/name: mydriving
  name: mydriving-poi-api
  namespace: mydriving-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: poi-api
      app.kubernetes.io/name: mydriving
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: poi-api
        app.kubernetes.io/name: mydriving
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
            - name: CONFIG_FILES_PATH
              value: /mnt/secrets-store
          image: registrykar3457.azurecr.io/poi-api:v0.1.0
          name: poi-api
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/poi/healthcheck
              port: http
            failureThreshold: 1
            periodSeconds: 3
          resources:
            requests:
              memory: 256Mi
              cpu: "0.25"
            limits:
              memory: 512Mi
              cpu: "0.5"
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"      
      restartPolicy: Always
