cicd/templates-way1/trips-viewer.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: trips-viewer
    app.kubernetes.io/name: mydriving
  name: mydriving-trips-viewer
  namespace: mydriving-web
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/component: trips-viewer
    app.kubernetes.io/name: mydriving
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: trips-viewer
    app.kubernetes.io/name: mydriving
  name: mydriving-trips-viewer
  namespace: mydriving-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: trips-viewer
      app.kubernetes.io/name: mydriving
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: trips-viewer
        app.kubernetes.io/name: mydriving
    spec:
      containers:
        - env:
            - name: TRIPS_API_ENDPOINT
              value: http://mydriving-trips-api:8080
            - name: USERPROFILE_API_ENDPOINT
              value: http://mydriving-profiles-api:8080
          image: registrykar3457.azurecr.io/trips-viewer:v0.1.0
          name: trips-viewer
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 1
            periodSeconds: 3
          resources:
            requests:
              memory: 256Mi
              cpu: "0.25"
            limits:
              memory: 512Mi
              cpu: "0.5"
      restartPolicy: Always
